@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2021, University of Oslo
+ * Copyright (c) 2004-2022, University of Oslo
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -27,6 +27,8 @@
  */
 package org.hisp.dhis.program.notification;
 
+import static java.lang.String.format;
+import static java.util.stream.Collectors.toList;
 import static org.hisp.dhis.program.notification.NotificationTrigger.PROGRAM_RULE;
 
 import java.util.Collections;
@@ -35,8 +37,10 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.annotation.Nullable;
 
@@ -46,8 +50,8 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import org.apache.commons.lang.BooleanUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.BooleanUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.hisp.dhis.common.DeliveryChannel;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.eventdatavalue.EventDataValue;
@@ -66,15 +70,15 @@ import org.hisp.dhis.program.message.ProgramMessage;
 import org.hisp.dhis.program.message.ProgramMessageRecipients;
 import org.hisp.dhis.program.message.ProgramMessageService;
 import org.hisp.dhis.program.notification.template.snapshot.NotificationTemplateMapper;
-import org.hisp.dhis.system.util.Clock;
+import org.hisp.dhis.scheduling.JobProgress;
 import org.hisp.dhis.trackedentity.TrackedEntityInstance;
 import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValue;
 import org.hisp.dhis.user.User;
+import org.hisp.dhis.user.UserGroup;
 import org.hisp.dhis.util.DateUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 
@@ -130,66 +134,67 @@ public class DefaultProgramNotificationService
 
     @Override
     @Transactional
-    public void sendScheduledNotificationsForDay( Date notificationDate )
+    public void sendScheduledNotificationsForDay( Date notificationDate, JobProgress progress )
     {
-        Clock clock = new Clock( log ).startClock()
-            .logTime( "Processing ProgramStageNotification messages" );
+        progress.startingStage( "Fetching and filtering scheduled templates " );
+        List<ProgramNotificationTemplate> scheduledTemplates = progress.runStage( List.of(),
+            this::getScheduledTemplates );
 
-        List<ProgramNotificationTemplate> scheduledTemplates = getScheduledTemplates();
-
-        int totalMessageCount = 0;
-
-        for ( ProgramNotificationTemplate template : scheduledTemplates )
-        {
-            MessageBatch batch = createScheduledMessageBatchForDay( template, notificationDate );
-            sendAll( batch );
-
-            totalMessageCount += batch.messageCount();
-        }
-
-        clock.logTime( String.format( "Created and sent %d messages in %s", totalMessageCount, clock.time() ) );
+        progress.startingStage( "Processing ProgramStageNotification messages", scheduledTemplates.size() );
+        AtomicInteger totalMessageCount = new AtomicInteger();
+        progress.runStage( scheduledTemplates.stream(),
+            template -> "Processing template " + template.getName(),
+            template -> {
+                MessageBatch batch = createScheduledMessageBatchForDay( template, notificationDate );
+                sendAll( batch );
+                totalMessageCount.addAndGet( batch.messageCount() );
+            },
+            ( success, failed ) -> format( "Created and sent %d messages", totalMessageCount.get() ) );
     }
 
     @Override
     @Transactional
-    public void sendScheduledNotifications()
+    public void sendScheduledNotifications( JobProgress progress )
     {
-        Clock clock = new Clock( log ).startClock()
-            .logTime( "Processing ProgramStageNotification messages scheduled by program rules" );
+        progress.startingStage( "Fetching and filtering ProgramStageNotification messages scheduled by program rules" );
+        List<NotificationInstanceWithTemplate> instancesWithTemplates = progress.runStage( List.of(),
+            () -> identifiableObjectManager.getAll( ProgramNotificationInstance.class ).stream()
+                .map( this::withTemplate )
+                .filter( this::hasTemplate )
+                .filter( IS_SCHEDULED_BY_PROGRAM_RULE )
+                .collect( toList() ) );
 
-        List<NotificationInstanceWithTemplate> instancesWithTemplates = identifiableObjectManager
-            .getAll( ProgramNotificationInstance.class ).stream()
-            .map( this::withTemplate )
-            .filter( this::hasTemplate )
-            .filter( IS_SCHEDULED_BY_PROGRAM_RULE )
-            .collect( Collectors.toList() );
-
+        progress.startingStage( "Processing ProgramStageNotification messages scheduled by program rules",
+            instancesWithTemplates.size() );
         if ( instancesWithTemplates.isEmpty() )
         {
+            progress.completedStage( "No instances with templates found." );
             return;
         }
 
-        int totalMessageCount;
+        List<MessageBatch> batches = progress.runStage( List.of(), () -> {
+            Stream<MessageBatch> programInstanceBatches = instancesWithTemplates.stream()
+                .filter( this::hasProgramInstance )
+                .map( iwt -> createProgramInstanceMessageBatch(
+                    iwt.getProgramNotificationTemplate(),
+                    List.of( iwt.getProgramNotificationInstance().getProgramInstance() ) ) );
 
-        List<MessageBatch> batches = instancesWithTemplates.stream()
-            .filter( this::hasProgramInstance )
-            .map( iwt -> createProgramInstanceMessageBatch(
-                iwt.getProgramNotificationTemplate(),
-                ImmutableList.of( iwt.getProgramNotificationInstance().getProgramInstance() ) ) )
-            .collect( Collectors.toList() );
+            Stream<MessageBatch> programStageInstanceBatches = instancesWithTemplates.stream()
+                .filter( this::hasProgramStageInstance )
+                .map( iwt -> createProgramStageInstanceMessageBatch(
+                    iwt.getProgramNotificationTemplate(),
+                    List.of( iwt.getProgramNotificationInstance().getProgramStageInstance() ) ) );
 
-        batches.addAll( instancesWithTemplates.stream()
-            .filter( this::hasProgramStageInstance )
-            .map( iwt -> createProgramStageInstanceMessageBatch(
-                iwt.getProgramNotificationTemplate(),
-                ImmutableList.of( iwt.getProgramNotificationInstance().getProgramStageInstance() ) ) )
-            .collect( Collectors.toList() ) );
+            return Stream.concat( programInstanceBatches, programStageInstanceBatches ).collect( toList() );
+        } );
 
-        batches.forEach( this::sendAll );
-
-        totalMessageCount = batches.stream().mapToInt( MessageBatch::messageCount ).sum();
-
-        clock.logTime( String.format( "Created and sent %d messages in %s", totalMessageCount, clock.time() ) );
+        progress.startingStage( "Sending message batches", batches.size() );
+        progress.runStage( batches.stream(),
+            batch -> format( "Sending batch with %d DHIS messages and %d program messages",
+                batch.dhisMessages.size(), batch.programMessages.size() ),
+            this::sendAll,
+            ( success, failed ) -> format( "Created and sent %d messages",
+                batches.stream().mapToInt( MessageBatch::messageCount ).sum() ) );
     }
 
     private boolean hasProgramStageInstance( NotificationInstanceWithTemplate notificationInstanceWithTemplate )
@@ -287,10 +292,28 @@ public class DefaultProgramNotificationService
 
     @Override
     @Transactional
+    public void sendProgramRuleTriggeredNotifications( long pnt, ProgramInstance programInstance )
+    {
+        MessageBatch messageBatch = createProgramInstanceMessageBatch( notificationTemplateService.get( pnt ),
+            Collections.singletonList( programInstance ) );
+        sendAll( messageBatch );
+    }
+
+    @Override
+    @Transactional
     public void sendProgramRuleTriggeredEventNotifications( long pnt, long programStageInstance )
     {
         MessageBatch messageBatch = createProgramStageInstanceMessageBatch( notificationTemplateService.get( pnt ),
             Collections.singletonList( programStageInstanceStore.get( programStageInstance ) ) );
+        sendAll( messageBatch );
+    }
+
+    @Override
+    @Transactional
+    public void sendProgramRuleTriggeredEventNotifications( long pnt, ProgramStageInstance programStageInstance )
+    {
+        MessageBatch messageBatch = createProgramStageInstanceMessageBatch( notificationTemplateService.get( pnt ),
+            Collections.singletonList( programStageInstanceStore.getByUid( programStageInstance.getUid() ) ) );
         sendAll( messageBatch );
     }
 
@@ -315,7 +338,7 @@ public class DefaultProgramNotificationService
     {
         return identifiableObjectManager.getAll( ProgramNotificationTemplate.class ).stream()
             .filter( n -> n.getNotificationTrigger().isScheduled() )
-            .collect( Collectors.toList() );
+            .collect( toList() );
     }
 
     private void sendProgramStageInstanceNotifications( ProgramStageInstance programStageInstance,
@@ -451,7 +474,10 @@ public class DefaultProgramNotificationService
 
         if ( recipientType == ProgramNotificationRecipient.USER_GROUP )
         {
-            recipients = template.getRecipientUserGroup().getMembers();
+            recipients = Optional.ofNullable( template )
+                .map( ProgramNotificationTemplate::getRecipientUserGroup )
+                .map( UserGroup::getMembers )
+                .orElse( recipients );
 
             final boolean limitToHierarchy = BooleanUtils.toBoolean( template.getNotifyUsersInHierarchyOnly() );
 
@@ -503,7 +529,7 @@ public class DefaultProgramNotificationService
             List<String> recipientList = psi.getEventDataValues().stream()
                 .filter( dv -> template.getRecipientDataElement().getUid().equals( dv.getDataElement() ) )
                 .map( EventDataValue::getValue )
-                .collect( Collectors.toList() );
+                .collect( toList() );
 
             if ( template.getDeliveryChannels().contains( DeliveryChannel.SMS ) )
             {
@@ -545,7 +571,7 @@ public class DefaultProgramNotificationService
             List<String> recipientList = pi.getEntityInstance().getTrackedEntityAttributeValues().stream()
                 .filter( av -> template.getRecipientProgramAttribute().getUid().equals( av.getAttribute().getUid() ) )
                 .map( TrackedEntityAttributeValue::getPlainValue )
-                .collect( Collectors.toList() );
+                .collect( toList() );
 
             if ( template.getDeliveryChannels().contains( DeliveryChannel.SMS ) )
             {
@@ -601,7 +627,7 @@ public class DefaultProgramNotificationService
     {
         messages.forEach( m -> messageService.sendMessage(
             new MessageConversationParams.Builder( m.recipients, null, m.message.getSubject(), m.message.getMessage(),
-                MessageType.SYSTEM )
+                MessageType.SYSTEM, null )
                     .withForceNotification( true )
                     .build() ) );
     }
@@ -613,11 +639,11 @@ public class DefaultProgramNotificationService
             return;
         }
 
-        log.debug( String.format( "Dispatching %d ProgramMessages", messages.size() ) );
+        log.debug( format( "Dispatching %d ProgramMessages", messages.size() ) );
 
         BatchResponseStatus status = programMessageService.sendMessages( Lists.newArrayList( messages ) );
 
-        log.debug( String.format( "Resulting status from ProgramMessageService:\n %s", status.toString() ) );
+        log.debug( format( "Resulting status from ProgramMessageService:%n %s", status.toString() ) );
     }
 
     private void sendAll( MessageBatch messageBatch )
